Update background color for overlapping issue on mobile

--- a/projects/packages/jetpack-mu-wpcom/src/features/wpcom-admin-bar/wpcom-admin-bar.scss
+++ b/projects/packages/jetpack-mu-wpcom/src/features/wpcom-admin-bar/wpcom-admin-bar.scss
@@ -94,6 +94,8 @@
 	right: 0;
 
 	@media (max-width: 782px) {
+		background-color: blue;
+
 		#wp-admin-bar-help-center {
 			display: block !important;
 			width: 52px !important;
